fix(ui): overflow scrolling and coord displacement
- Remove overflow scrolling at smaller screen
- Fix mouse event coordinate displacement after resizing screen

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ body {
     "collar" 8.257%
     "body" 21.743%;
   transition: height 1s ease-out, transform 1s ease-out;
+  overflow: hidden;
 }
 .dora-head {
   grid-area: head;
@@ -218,7 +219,7 @@ body {
 /*********************************/
 .color-palette {
   display: flex;
-  height: var(--btn-height);
+  flex-wrap: wrap;
 }
 .color {
   height: var(--btn-height);
